--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -19,7 +19,7 @@
 @define-color color15 #c5cccd;
 
 * {
-    font-family: "JetBrainsMono Nerd Font";
+    font-family: "CaskaydiaCove Nerd Font";
     font-size: 13px;
     min-height: 0;
 }
